--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -14,16 +14,15 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: configure
-      run: ./configure
-
     - name: Install dependencies
-      run: make | 
+      run: | 
         sudo apt-get update
         sudo apt-get install -y build-essential
         sudo apt-get install -y jq
-    
 
+    - name: Make all
+      run: make all
+      
     - name: Run check
       run: make check
 
